<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calling WorkFlow</string>
    <string name="select_status_group">Select group of callings</string>

    <string name="add_btn_label">Add Calling</string>
    <string name="filter_label">Filter</string>
    <string name="sort_label">Sort</string>
    <string-array name="filters_list">
        <item>Pending</item>
        <item>Completed</item>
    </string-array>
    <string name="sort_message_name">Sorting by Member Name</string>
    <string name="sort_message_calling">Sorting by Calling Position</string>
    <string name="sort_message_status">Sorting by Calling Status</string>

    <string name="save_btn_label">Save</string>
    <string name="clear_btn_label">Clear</string>
    <string name="delete_btn_label">Delete</string>
    <string name="confirmation_message">Delete this Calling?</string>
    <string name="update_status_label">Update Status</string>
    
    <string name="cancel_btn_label">Cancel</string>
    <string name="calling_label">Calling</string>
    <string name="name_label">Name</string>

    <string name="ok">Ok</string>
    <string name="error">Error</string>
    <string name="error_service_unavailable">No data connection</string>
    <string name="error_lost_connection">Connection was here, but it\'s not now</string>

    <string name="calling_update_success">Successfully Updated %1$s - %2$s</string>
    <string name="calling_update_failure">Update failed for %1$s - %2$s</string>
    <string name="calling_update_download">All device updates saved. Downloading latest callings from server.</string>
    <string name="calling_update_success_summary">Successfully updated %1$d callings.</string>
    <string name="calling_update_failure_summary">Unable to update %2$d callings.</string>
    <string name="calling_update_no_changes">There were no changes on your device to save.</string>
    <string name="calling_update_server_synced">All the callings for your unit have been downloaded to your device</string>
    <string name="pref_sync_callings_now_title">Sync Callings</string>
    <string name="pref_sync_callings_now_summary">Save any unsaved changes and update from the server</string>
    <string name="pref_sync_all_now_title">Sync unit data</string>
    <string name="pref_sync_all_now_summary">Update your ward list, statuses, and list of standard callings</string>
    <string name="pref_sync_all_progress_title">Syncing unit data</string>
    <string name="pref_sync_all_progress_success">Unit data updated</string>
    <string name="pref_sync_all_progress_failure">Unable to update data. Please try syncing again later</string>

    <string name="pref_title">Settings</string>

</resources>
