<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <Button android:id="@+id/saveCallingButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/save_btn_label"
                android:onClick="saveCalling" />
        <Button android:id="@+id/cancelButton"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/cancel_btn_label"
                android:onClick="cancelChanges" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <TextView android:id="@+id/callingPositionLabel"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:text="@string/calling_label" />
        <EditText android:id="@+id/callingPosition"
                  android:layout_height="wrap_content"
                  android:layout_width="fill_parent" />
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="wrap_content">
        <TextView android:id="@+id/nameLabel"
                  android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:text="@string/name_label" />
        <EditText android:id="@+id/memberName"
                      android:layout_height="wrap_content"
                      android:layout_width="fill_parent" />
    </LinearLayout>
</LinearLayout>
